bug fixes, almost there

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </div>
         
         <div class="row game">
-            <div id="remainingTime">Remaining Time: <span id="timer"></span></div>
+            <div id="remainingTime"><h2>Remaining Time: <span id="timer"></span></h2></div>
+        </div>
+        <div class="row game">
             <div class="text-center" id="question"></div>
         </div>
 
